--- a/init.org
+++ b/init.org
@@ -493,6 +493,16 @@ Use yasnippets everywhere, but I don't want the default snippets.
     (setq yas-verbosity 0))
 #+END_SRC
 
+* el-presenti
+
+el-presenti is pretty awful but it kinda works so let's just pretend
+everything is lovely.
+
+#+BEGIN_SRC emacs-lisp
+  (use-package el-presenti-mode)
+  (use-package el-presenti-edit-mode)
+#+END_SRC
+
 * All the little things
 
 Auto compile elisp-files
