--- a/init.org
+++ b/init.org
@@ -412,8 +412,9 @@ switch to it when using isearch.
 
 #+BEGIN_SRC emacs-lisp
   (use-package avy
-    :bind (:map isearch-mode-map
-                ("C-'" . avy-isearch)))
+    :bind (("C-\\" . avy-goto-char-2)
+           :map isearch-mode-map
+           ("C-\\" . avy-isearch)))
 #+END_SRC
 
 Swiper acts like loccur - showing me a list of lines matching a search.
@@ -421,7 +422,7 @@ Swiper acts like loccur - showing me a list of lines matching a search.
 #+BEGIN_SRC emacs-lisp
   (use-package swiper
     :bind (:map isearch-mode-map
-                ("C-s" . swiper-from-isearch)))
+                ("C-'" . swiper-from-isearch)))
 #+END_SRC
 
 
