--- a/init.org
+++ b/init.org
@@ -105,7 +105,7 @@ Don't show some modes in the modeline.
     :config
     (setq ispell-local-dictionary "en_GB")
     (setq ispell-local-dictionary-alist
-          '(("en_US" "[[:alpha:]]" "[^[:alpha:]]" "[']" nil ("-d" "en_GB") nil utf-8))))
+          '(("en_GB" "[[:alpha:]]" "[^[:alpha:]]" "[']" nil ("-d" "en_GB") nil utf-8))))
 #+END_SRC
 
 ** Coding styles
