--- a/init.org
+++ b/init.org
@@ -258,14 +258,16 @@ Use purpose to keep types of buffer in the same buffer.
     :init (purpose-mode)
     :bind ("C-c , l" . purpose-load-window-layout)
     :config
-    (add-to-list 'purpose-user-regexp-purposes '("_spec.rb$" . test))
+    (add-to-list 'purpose-user-regexp-purposes '("_spec.rb\\(<.*>\\)?$" . test))
     (add-to-list 'purpose-user-mode-purposes '(ruby-mode . edit))
     (add-to-list 'purpose-user-mode-purposes '(yaml-mode . edit))
     (add-to-list 'purpose-user-mode-purposes '(emacs-lisp-mode . edit))
     (add-to-list 'purpose-user-mode-purposes '(org-mode . edit))
+    (add-to-list 'purpose-user-mode-purposes '(web-mode . edit))
     (add-to-list 'purpose-user-mode-purposes '(html-mode . edit))
     (add-to-list 'purpose-user-mode-purposes '(scss-mode . edit))
     (add-to-list 'purpose-user-mode-purposes '(css-mode . edit))
+    (add-to-list 'purpose-user-mode-purposes '(javascript-mode . edit))
     (add-to-list 'purpose-user-mode-purposes '(magit-mode . tr))
     (add-to-list 'purpose-user-mode-purposes '(dired-mode . tr))
     (add-to-list 'purpose-user-mode-purposes '(compilation-mode . tr))
@@ -312,7 +314,8 @@ Use aggressive indent for reindenting code as you type.
     :functions aggressive-indent-global-mode
     :init
     (aggressive-indent-global-mode)
-    (add-to-list 'aggressive-indent-excluded-modes 'idris-mode))
+    (add-to-list 'aggressive-indent-excluded-modes 'idris-mode)
+    (add-to-list 'aggressive-indent-excluded-modes 'web-mode))
 #+END_SRC
 
 * Org mode
@@ -565,6 +568,16 @@ automatically assign instance variables.
     :bind (:map ruby-mode-map
                 ("C-c @" . jc-ruby-instance-variables)
                 ("C-<tab>" . jc-align-hash)))
+#+END_SRC
+
+Use web-mode to handle .html.erb files. Its indentation doesn't play
+well with fci-mode.
+
+#+BEGIN_SRC emacs-lisp
+  (use-package web-mode
+    :init (add-to-list 'auto-mode-alist '("\\.erb\\'" . web-mode))
+    :config
+    (add-hook 'web-mode-hook (lambda () (turn-off-fci-mode))))
 #+END_SRC
 
 ** Javascript
