--- a/init.org
+++ b/init.org
@@ -615,7 +615,20 @@ much so I just configure js-mode to be slightly more to my liking.
 Some people use coffeescript, so let's support that too.
 
 #+BEGIN_SRC emacs-lisp
-  (use-package coffee-mode)
+  (use-package coffee-mode
+    :init
+    (setq coffee-tab-width 2)
+    (setq coffee-indent-tabs-mode nil))
+#+END_SRC
+
+** (s)css
+
+Indentation for css mode applies to scss mode too
+
+#+BEGIN_SRC emacs-lisp
+  (use-package scss
+    :config
+    (setq css-indent-offset 2))
 #+END_SRC
 
 ** Go
